Fix : iframe parameters in MDX

--- a/src/pages/2018-09-01-humanlapse/index.fr.mdx
+++ b/src/pages/2018-09-01-humanlapse/index.fr.mdx
@@ -34,8 +34,8 @@ Projet photographique explorant l'usage du timelapse et de l'hyperlapse pour des
 
 <iframe
   src="https://player.vimeo.com/video/292003342"
-  frameborder="0"
-  allowfullscreen
+  frameBorder={0}
+  allowFullScreen
   width="1920"
   height="1080"
 ></iframe>
@@ -50,8 +50,8 @@ Projet photographique explorant l'usage du timelapse et de l'hyperlapse pour des
 
 <iframe
   src="https://player.vimeo.com/video/306033197"
-  frameborder="0"
-  allowfullscreen
+  frameBorder={0}
+  allowFullScreen
   width="1920"
   height="1080"
 ></iframe>
