--- a/src/pages/2019-08-01-indice50/index.fr.mdx
+++ b/src/pages/2019-08-01-indice50/index.fr.mdx
@@ -13,8 +13,8 @@ image: cover.jpg
 
 <iframe
   src="https://youtu.be/uABiceoBysY?rel=0"
-  frameborder="0"
-  allowfullscreen
+  frameBorder={0}
+  allowFullScreen
   width="1920"
   height="1080"
 ></iframe>
