--- a/src/pages/2023-01-01-reveality/index.fr.mdx
+++ b/src/pages/2023-01-01-reveality/index.fr.mdx
@@ -29,8 +29,8 @@ L'application prend la forme d'une boite à outils permettant :
 
 <iframe
   src="https://www.youtube.com/embed/I7a_KLPCZgs"
-  frameborder="0"
-  allowfullscreen
+  frameBorder={0}
+  allowFullScreen
   width="1920"
   height="1080"
 ></iframe>
