--- a/src/pages/2023-01-01-reveality/index.mdx
+++ b/src/pages/2023-01-01-reveality/index.mdx
@@ -31,8 +31,8 @@ The app is a toolkit allowing multiple use cases such as :
 
 <iframe
   src="https://www.youtube.com/embed/I7a_KLPCZgs"
-  frameborder="0"
-  allowfullscreen
+  frameBorder={0}
+  allowFullScreen
   width="1920"
   height="1080"
 ></iframe>
