--- a/src/pages/2017-10-10-badhinjan-trio/index.mdx
+++ b/src/pages/2017-10-10-badhinjan-trio/index.mdx
@@ -13,8 +13,8 @@ image: post_badhinjan.jpg
 
 <iframe
   src="https://www.youtube.com/embed/AyRCXbdHzTE?rel=0"
-  frameborder="0"
-  allowfullscreen
+  frameBorder={0}
+  allowFullScreen
   width="1920"
   height="1080"
 ></iframe>
