--- a/src/pages/2018-03-02-harmonie-des-spheres/index.fr.mdx
+++ b/src/pages/2018-03-02-harmonie-des-spheres/index.fr.mdx
@@ -15,8 +15,8 @@ image: cover.jpg
   width="1920"
   height="1080"
   src="https://www.youtube.com/embed/W2fsqEoim-o?rel=0"
-  frameborder="0"
-  allowfullscreen
+  frameBorder={0}
+  allowFullScreen
 ></iframe>
 
 [Lien Direct](https://www.youtube.com/watch?v=W2fsqEoim-o)
