--- a/src/pages/2018-09-01-humanlapse/index.mdx
+++ b/src/pages/2018-09-01-humanlapse/index.mdx
@@ -34,8 +34,8 @@ Photography project aiming to explore usage of timelapse and hyperlapse techniqu
 
 <iframe
   src="https://player.vimeo.com/video/292003342"
-  frameborder="0"
-  allowfullscreen
+  frameBorder={0}
+  allowFullScreen
   width="1920"
   height="1080"
 ></iframe>
@@ -56,8 +56,8 @@ Digital photo frames, each one looping a single humanlapse video. The frames are
 
 <iframe
   src="https://player.vimeo.com/video/306033197"
-  frameborder="0"
-  allowfullscreen
+  frameBorder={0}
+  allowFullScreen
   width="1920"
   height="1080"
 ></iframe>
