--- a/src/pages/2018-10-30-innocent-words/index.mdx
+++ b/src/pages/2018-10-30-innocent-words/index.mdx
@@ -15,8 +15,8 @@ embeddedImagesLocal:
 
 <iframe
   src="https://www.youtube.com/embed/V4CsJzZjhOk?rel=0"
-  frameborder="0"
-  allowfullscreen
+  frameBorder={0}
+  allowFullScreen
   width="1920"
   height="1080"
 ></iframe>
