--- a/src/pages/2019-04-01-space-dances/index.mdx
+++ b/src/pages/2019-04-01-space-dances/index.mdx
@@ -13,8 +13,8 @@ image: cover2.jpg
 
 <iframe
   src="https://player.vimeo.com/video/388504943"
-  frameborder="0"
-  allowfullscreen
+  frameBorder={0}
+  allowFullScreen
   width="1920"
   height="1080"
 ></iframe>
