--- a/src/pages/2020-01-01-deep-roto/index.mdx
+++ b/src/pages/2020-01-01-deep-roto/index.mdx
@@ -15,7 +15,7 @@ embeddedImagesLocal:
 
 <iframe
   src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6768081479651135488?compact=1"
-  frameborder="0"
+  frameBorder={0}
   width="1080"
   height="1080"
 ></iframe>
