--- a/src/pages/2022-07-01-smart-faune/index.fr.mdx
+++ b/src/pages/2022-07-01-smart-faune/index.fr.mdx
@@ -19,8 +19,8 @@ embeddedImagesLocal:
   {/*
 <iframe
   src="https://www.youtube.com/embed/1gm_-xeVMs0"
-  frameborder="0"
-  allowfullscreen
+  frameBorder={0}
+  allowFullScreen
   width="1920"
   height="1080"
 ></iframe>
