Fix : responsive iframe plubin not working -- made our own

--- a/src/pages/2017-10-10-badhinjan-trio/index.fr.mdx
+++ b/src/pages/2017-10-10-badhinjan-trio/index.fr.mdx
@@ -11,13 +11,11 @@ priority: 5
 image: post_badhinjan.jpg
 ---
 
-<iframe
+<ResponsiveIframe
   src="https://www.youtube.com/embed/AyRCXbdHzTE?rel=0"
-  frameBorder={0}
-  allowFullScreen
   width="1920"
   height="1080"
-></iframe>
+/>
 
 [Lien Direct](https://www.youtube.com/watch?v=AyRCXbdHzTE)
 
