--- a/src/pages/2018-09-01-humanlapse/index.fr.mdx
+++ b/src/pages/2018-09-01-humanlapse/index.fr.mdx
@@ -32,13 +32,11 @@ Projet photographique explorant l'usage du timelapse et de l'hyperlapse pour des
 
 #### Teaser
 
-<iframe
+<ResponsiveIframe
   src="https://player.vimeo.com/video/292003342"
-  frameBorder={0}
-  allowFullScreen
   width="1920"
   height="1080"
-></iframe>
+/>
 
 [Lien Direct](https://vimeo.com/292003342)
 
@@ -48,13 +46,11 @@ Projet photographique explorant l'usage du timelapse et de l'hyperlapse pour des
 - [Toï Toï Le Zinc](//www.toitoilezinc.fr/) - June/July 2019
 - MJC Montplaisir - January 2020
 
-<iframe
+<ResponsiveIframe
   src="https://player.vimeo.com/video/306033197"
-  frameBorder={0}
-  allowFullScreen
   width="1920"
   height="1080"
-></iframe>
+/>
 
 [Lien Direct](https://vimeo.com/306033197)
 
