--- a/src/pages/2018-09-01-humanlapse/index.mdx
+++ b/src/pages/2018-09-01-humanlapse/index.mdx
@@ -32,13 +32,11 @@ Photography project aiming to explore usage of timelapse and hyperlapse techniqu
 
 #### Project Teaser
 
-<iframe
+<ResponsiveIframe
   src="https://player.vimeo.com/video/292003342"
-  frameBorder={0}
-  allowFullScreen
   width="1920"
   height="1080"
-></iframe>
+/>
 
 [Direct Link](https://vimeo.com/292003342)
 
@@ -54,12 +52,10 @@ Digital photo frames, each one looping a single humanlapse video. The frames are
 
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />
 
-<iframe
+<ResponsiveIframe
   src="https://player.vimeo.com/video/306033197"
-  frameBorder={0}
-  allowFullScreen
   width="1920"
   height="1080"
-></iframe>
+/>
 
 [Direct Link](https://vimeo.com/306033197)
