--- a/src/pages/2018-10-30-innocent-words/index.fr.mdx
+++ b/src/pages/2018-10-30-innocent-words/index.fr.mdx
@@ -13,13 +13,11 @@ embeddedImagesLocal:
   - logo.jpg
 ---
 
-<iframe
+<ResponsiveIframe
   src="https://www.youtube.com/embed/V4CsJzZjhOk?rel=0"
-  frameBorder={0}
-  allowFullScreen
   width="1920"
   height="1080"
-></iframe>
+/>
 
 [Lien Direct](https://www.youtube.com/watch?v=V4CsJzZjhOk)
 
