--- a/src/pages/2019-08-01-indice50/index.fr.mdx
+++ b/src/pages/2019-08-01-indice50/index.fr.mdx
@@ -11,13 +11,11 @@ priority: 4
 image: cover.jpg
 ---
 
-<iframe
+<ResponsiveIframe
   src="https://youtu.be/uABiceoBysY?rel=0"
-  frameBorder={0}
-  allowFullScreen
   width="1920"
   height="1080"
-></iframe>
+/>
 
 [Lien Direct](https://youtu.be/uABiceoBysY)
 
