--- a/src/pages/2019-08-01-indice50/index.mdx
+++ b/src/pages/2019-08-01-indice50/index.mdx
@@ -11,13 +11,11 @@ priority: 4
 image: cover.jpg
 ---
 
-<iframe
+<ResponsiveIframe
   src="https://www.youtube.com/embed/5gkkIeeAuSU?rel=0"
-  frameBorder={0}
-  allowFullScreen
   width="1920"
   height="1080"
-></iframe>
+/>
 
 [Direct Link](https://www.youtube.com/watch?v=5gkkIeeAuSU)
 
