--- a/src/pages/2020-01-01-deep-roto/index.fr.mdx
+++ b/src/pages/2020-01-01-deep-roto/index.fr.mdx
@@ -13,12 +13,11 @@ embeddedImagesLocal:
   - cover.jpg
 ---
 
-<iframe
+<ResponsiveIframe
   src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6768081479651135488?compact=1"
-  frameBorder={0}
   width="1080"
   height="1080"
-></iframe>
+/>
 
 [Lien Direct](https://www.linkedin.com/feed/update/urn:li:activity:6768091473599627264/)
 
