--- a/src/pages/2022-07-01-smart-faune/index.mdx
+++ b/src/pages/2022-07-01-smart-faune/index.mdx
@@ -16,14 +16,11 @@ embeddedImagesLocal:
 ---
 
 
-    {/*
-<iframe
+<ResponsiveIframe
   src="https://www.youtube.com/embed/1gm_-xeVMs0"
-  frameBorder={0}
-  allowFullScreen
   width="1920"
   height="1080"
-></iframe>*/}
+/>
 
 [Direct Link](https://www.youtube.com/watch?v=1gm_-xeVMs0)
 
