--- a/src/pages/2023-01-01-reveality/index.fr.mdx
+++ b/src/pages/2023-01-01-reveality/index.fr.mdx
@@ -27,13 +27,11 @@ L'application prend la forme d'une boite à outils permettant :
 <br/>
 
 
-<iframe
+<ResponsiveIframe
   src="https://www.youtube.com/embed/I7a_KLPCZgs"
-  frameBorder={0}
-  allowFullScreen
   width="1920"
   height="1080"
-></iframe>
+/>
 
 [Lien Direct](https://reveality.io/fr/education)
 
