--- a/src/pages/2023-01-01-reveality/index.mdx
+++ b/src/pages/2023-01-01-reveality/index.mdx
@@ -29,13 +29,11 @@ The app is a toolkit allowing multiple use cases such as :
 
 
 
-<iframe
+<ResponsiveIframe
   src="https://www.youtube.com/embed/I7a_KLPCZgs"
-  frameBorder={0}
-  allowFullScreen
-  width="1920"
-  height="1080"
-></iframe>
+  width={1920}
+  height={1080}
+/>
 
 [Direct Link](https://reveality.io/fr/education)
 
