--- a/src/pages/2018-03-02-harmonie-des-spheres/index.mdx
+++ b/src/pages/2018-03-02-harmonie-des-spheres/index.mdx
@@ -11,13 +11,11 @@ priority: 4
 image: cover.jpg
 ---
 
-<iframe
+<ResponsiveIframe
   width="1920"
   height="1080"
   src="https://www.youtube.com/embed/W2fsqEoim-o?rel=0"
-  frameBorder={0}
-  allowFullScreen
-></iframe>
+/>
 
 [Direct Link](https://www.youtube.com/watch?v=W2fsqEoim-o)
 
