--- a/src/pages/2019-04-01-space-dances/index.mdx
+++ b/src/pages/2019-04-01-space-dances/index.mdx
@@ -11,13 +11,12 @@ priority: 2
 image: cover2.jpg
 ---
 
-<iframe
+<ResponsiveIframe
   src="https://player.vimeo.com/video/388504943"
-  frameBorder={0}
-  allowFullScreen
+
   width="1920"
   height="1080"
-></iframe>
+/>
 
 [Direct Link](//vimeo.com/388504943)
 
