--- a/src/pages/2022-07-01-smart-faune/index.fr.mdx
+++ b/src/pages/2022-07-01-smart-faune/index.fr.mdx
@@ -16,15 +16,13 @@ embeddedImagesLocal:
 ---
 
 
-  {/*
-<iframe
+
+<ResponsiveIframe
   src="https://www.youtube.com/embed/1gm_-xeVMs0"
-  frameBorder={0}
-  allowFullScreen
   width="1920"
   height="1080"
-></iframe>
-*/}
+/>
+
 
 [Lien Direct](https://www.youtube.com/watch?v=1gm_-xeVMs0)
 
