--- a/src/pages/about/index.fr.mdx
+++ b/src/pages/about/index.fr.mdx
@@ -10,7 +10,7 @@ embeddedImagesLocal:
   - profile.jpg
 ---
 
-<Image alt={"Image d'illustration"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
+<MimsImage alt={"Image d'illustration"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
 
 <br />
 <br />
