New : sitemap, robots.txt, and fix build errors on mdx

--- a/src/pages/page-grading-showcase/index.fr.mdx
+++ b/src/pages/page-grading-showcase/index.fr.mdx
@@ -2,10 +2,10 @@
 path: /colorist
 layout: page
 category: portfolio
-language: en
-title: Color Grading
+language: fr
+title: Étalonnage
 subtitle: Portfolio
-description: Color grading works of Maxime Touroute
+description: Portfolio d'étalonnages de Maxime Touroute
 date: '2020-01-01'
 image: ber2_a.jpg
 priority: 6
@@ -38,13 +38,8 @@ embeddedImagesLocal:
   - ind1_b.jpg
 ---
 
-<div style="margin-bottom:2em">
-<h1 style="text-align: center">Color Grading works</h1>
-
-{/* <p style="text-align: center"><em>Color grading is comparable to the process of developing photos.
-It's a meticulous work of bringing images to life to enhance the emotions they carry.
-{' '} <strong>Balance </strong> and <strong>accuracy</strong> are as important as <strong>artistic style</strong> because you don't only add a mood to the image, you also guide the audience's gaze to elements in the frame. In today's world where we are surrounded by screens of different sizes and color restitutions, grading is also about making sure every watcher can have the best viewing experience on all types of devices.</em></p> -->
-*/}
+<div style={{marginBottom: '2em'}}>
+<h1 style={{textAlign: 'center'}}>Portfolio Étalonnage</h1>
 
 <br/>
 </div>
