--- a/src/pages/page-grading-showcase/index.mdx
+++ b/src/pages/page-grading-showcase/index.mdx
@@ -2,10 +2,10 @@
 path: /colorist
 layout: page
 category: portfolio
-language: fr
-title: Étalonnage
+language: en
+title: Color Grading
 subtitle: Portfolio
-description: Portfolio d'étalonnages de Maxime Touroute
+description: Color grading works of Maxime Touroute
 date: '2020-01-01'
 image: ber2_a.jpg
 priority: 6
@@ -38,12 +38,9 @@ embeddedImagesLocal:
   - ind1_b.jpg
 ---
 
-<div style="margin-bottom:2em">
-<h1 style="text-align: center">Portfolio Étalonnage</h1>
+<div style={{marginBottom: '2em'}}>
+<h1 style={{textAlign: 'center'}}>Color Grading works</h1>
 
-{/* <p style="text-align: center"><em>Color grading is comparable to the process of developing photos.
-It's a meticulous work of bringing images to life to enhance the emotions they carry.
-{' '} <strong>Balance </strong> and <strong>accuracy</strong> are as important as <strong>artistic style</strong> because you don't only add a mood to the image, you also guide the audience's gaze to elements in the frame. In today's world where we are surrounded by screens of different sizes and color restitutions, grading is also about making sure every watcher can have the best viewing experience on all types of devices.</em></p>--> */}
 
 <br/>
 </div>
