--- a/src/pages/page-photography/index.mdx
+++ b/src/pages/page-photography/index.mdx
@@ -2,11 +2,11 @@
 path: /photography
 layout: page
 category: portfolio
-language: fr
-title: Photographie
+language: en
+title: Photography
 priority: 6
 subtitle: Portfolio
-description: Selection de travaux photo
+description: A selection of photography works.
 image: experiments/b-22.jpg
 embeddedImagesLocal:
   - experiments/b-22.jpg
@@ -51,8 +51,8 @@ embeddedImagesLocal:
   - dailies/b-4.jpg
 ---
 
-<div style="margin-bottom:2em">
-  <h1 style="text-align: center">Portfolio Photographie</h1>
+<div style={{marginBottom:'2em'}}>
+  <h1 style={{textAlign: 'center'}}>Photography Portfolio</h1>
   <br />
 </div>
 <hr />
@@ -60,7 +60,7 @@ embeddedImagesLocal:
 <br />
 <br />
 
-# Experimentations
+# Experiments
 
 <br />
 
@@ -70,7 +70,7 @@ embeddedImagesLocal:
 
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[12, 13, 14, 15, 16, 17]} />
 
-# Paysages
+# Landscapes
 
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[18, 19, 20, 21, 22, 23]} />
 
@@ -86,4 +86,4 @@ embeddedImagesLocal:
 
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[30, 31, 32, 33, 34, 35]} />
 
-Plus sur [Instagram](https://instagram.com/maximetouroute).
+More on [Instagram](https://instagram.com/maximetouroute).
