--- a/src/pages/page-about/index.mdx
+++ b/src/pages/page-about/index.mdx
@@ -10,7 +10,7 @@ embeddedImagesLocal:
   - profile.jpg
 ---
 
-<MimsImage alt={"Image d'illustration"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
+<MdxImage alt={"Image d'illustration"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
 
 <br />
 <br />
