New : content updates

--- a/src/pages/2017-10-10-badhinjan-trio/index.fr.mdx
+++ b/src/pages/2017-10-10-badhinjan-trio/index.fr.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: fr
 title: Astrakan Café
 subtitle: Clip
+tags: other
 description: Video promotionnelle pour le Badhinjan Trio
 date: '2017-10-10'
 priority: 5
