--- a/src/pages/2017-10-10-badhinjan-trio/index.mdx
+++ b/src/pages/2017-10-10-badhinjan-trio/index.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: en
 title: Astrakan Café
 subtitle: Music clip
+tags: other
 description: Promotional video for the Badhinjan Trio
 date: '2017-10-10'
 priority: 5
