--- a/src/pages/2018-03-02-harmonie-des-spheres/index.fr.mdx
+++ b/src/pages/2018-03-02-harmonie-des-spheres/index.fr.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: fr
 title: Harmonie des Sphères
 subtitle: Court Métrage
+tags: other
 description: Court métrage indépendant réalisé et produit par Vincent Montalieu
 date: '2018-12-25'
 priority: 4
