--- a/src/pages/2018-05-01-realite/index.fr.mdx
+++ b/src/pages/2018-05-01-realite/index.fr.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: fr
 title: Réalité
 subtitle: Court Métrage
+tags: other
 description: Très court métrage sur le sujet de la vieillesse. Filmé en quelques heures avec une vraie grand-mère.
 date: '2019-01-02'
 image: post_realite.jpg
