--- a/src/pages/2018-05-01-realite/index.mdx
+++ b/src/pages/2018-05-01-realite/index.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: en
 title: Réalité
 subtitle: Short Movie
+tags: other
 description: A short movie about the elderly. Shot in a few hours with a real grandma.
 date: '2019-01-02'
 image: post_realite.jpg
