--- a/src/pages/2018-09-01-humanlapse/index.fr.mdx
+++ b/src/pages/2018-09-01-humanlapse/index.fr.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: fr
 title: Humanlapse
 subtitle: Portraits en mouvement
+tags: other
 description: Projet photographique explorant l'usage du timelapse et de l'hyperlapse pour des portraits.
 date: '2019-02-01'
 image: cover.jpg
