--- a/src/pages/2018-11-30-the-live-drawing-project/index.fr.mdx
+++ b/src/pages/2018-11-30-the-live-drawing-project/index.fr.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: fr
 title: Live Drawing Project
-subtitle: Dessin Participatif
+subtitle: Mapping Interactif, Dessin
+tags: mapping
 description: Projet d'art numérique explorant les possibilités de dessin participatif et collectif en temps réel.
 date: '2020-01-01'
 image: b.jpg
