--- a/src/pages/2018-11-30-the-live-drawing-project/index.mdx
+++ b/src/pages/2018-11-30-the-live-drawing-project/index.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: en
 title: Live Drawing Project
 subtitle: Collaborative Drawing
+tags: mapping
 description: A digital arts project about experiencing the possibilities of collaborative and live drawing.
 date: '2020-01-01'
 image: b.jpg
