--- a/src/pages/2019-04-01-space-dances/index.fr.mdx
+++ b/src/pages/2019-04-01-space-dances/index.fr.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: fr
 title: Space Dances
-subtitle: Réalité Augmentée
+subtitle: Réalité Augmentée, Danse
+tags: xr
 description: Space Dances explore la danse en Réalité Augmentée et Réalité Mixte, en utilisant des technologies et méthodes de captation holographiques à l'état de l'art.
 date: '2020-01-01'
 priority: 2
