--- a/src/pages/2019-04-01-space-dances/index.mdx
+++ b/src/pages/2019-04-01-space-dances/index.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: en
 title: Space Dances
-subtitle: Augmented Reality
+subtitle: Augmented Reality, Dance
+tags: xr
 description: Project exploring dance in Augmented/Mixed Reality using state of the art technologies and filming techniques.
 date: '2020-01-01'
 priority: 2
