--- a/src/pages/2019-08-01-indice50/index.fr.mdx
+++ b/src/pages/2019-08-01-indice50/index.fr.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: fr
 title: Indice 50
 subtitle: Court Métrage
+tags: other
 description: Un homme cherche à rejoindre ses amis à la piscine, mais il n'a clairement pas la bonne adresse.
 date: '2019-01-01'
 priority: 4
