--- a/src/pages/2019-08-01-indice50/index.mdx
+++ b/src/pages/2019-08-01-indice50/index.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: en
 title: Indice 50
 subtitle: Short Movie
+tags: other
 description: A man wants to join its friends at the swimming pool but he clearly doesn't have the right address.
 date: '2019-01-01'
 priority: 4
