--- a/src/pages/2020-01-01-babel/index.fr.mdx
+++ b/src/pages/2020-01-01-babel/index.fr.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: fr
 title: Babel
-subtitle: Jeu vidéoprojeté
+subtitle: Mapping Interactif, Jeu, Multijoueur
+tags: mapping
 description: Jeu multijoueur vidéoprojeté où le public essaie de construire la plus haute tour.
 date: '2019-11-01'
 image: b-4.jpg
