--- a/src/pages/2020-01-01-babel/index.mdx
+++ b/src/pages/2020-01-01-babel/index.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: en
 title: Babel
-subtitle: Multiplayer Videoprojected Game
+subtitle: Interactive Mapping, Game, Multiplayer
+tags: mapping
 description: Multiplayer projected game in which the public tries to build the tallest tower.
 date: '2019-11-01'
 image: b-4.jpg
