--- a/src/pages/2020-01-01-deep-roto/index.mdx
+++ b/src/pages/2020-01-01-deep-roto/index.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: en
 title: Deep Roto
-subtitle: Software
+subtitle: Software, AI, Video
+tags: software
 description: Automatic rotoscoping software
 date: '2020-01-01'
 image: cover.jpg
