--- a/src/pages/2020-04-01-draw-from-the-window/index.fr.mdx
+++ b/src/pages/2020-04-01-draw-from-the-window/index.fr.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: fr
 title: Draw From The Window
-subtitle: Videomapping Décentralisé
+subtitle: Mapping Décentralisé, Initiative Covid
+tags: mapping
 description: Système de vidéoprojection décentralisé pour ramener l'art dans les zones résidentielles pendant les confinements.
 date: '2020-04-01'
 image: 26v_5_webw.jpg
