--- a/src/pages/2020-04-01-draw-from-the-window/index.mdx
+++ b/src/pages/2020-04-01-draw-from-the-window/index.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: en
 title: Draw From The Window
-subtitle: Decentralised Videomapping
+subtitle: Decentralised Videomapping, Covid Initiative
+tags: mapping
 description: Decentralised videoprojection system to bring art at the doorstep of residential areas during lockdowns.
 date: '2020-04-01'
 image: 26v_5_webw.jpg
