--- a/src/pages/2021-04-01-monolith/index.mdx
+++ b/src/pages/2021-04-01-monolith/index.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: en
 title: Monolith
 subtitle: Interactive Musical Performance
+tags: other
 description: Collaborative live electronic music show in which the crowd gets to choose the next sounds and visuals in real time, exploring a new form of musical improvisation.
 date: '2021-04-01'
 image: cover.jpg
