--- a/src/pages/2021-06-01-cadre-de-rue/index.fr.mdx
+++ b/src/pages/2021-06-01-cadre-de-rue/index.fr.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: fr
 title: Cadres de Rue
-subtitle: Art urbain
+subtitle: Art urbain, Réalité Augmentée
+tags: xr
 description: Cadres photo en Réalité Augmentée à installer dans la rue
 date: '2021-06-01'
 image: 4.jpg
