--- a/src/pages/2021-06-01-cadre-de-rue/index.mdx
+++ b/src/pages/2021-06-01-cadre-de-rue/index.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: en
 title: Street Frames
-subtitle: Urban Art
+subtitle: Urban Art, Augmented Reality
+tags: xr
 description: Augmented Reality Photo frames to put in the street
 date: '2021-06-01'
 image: 4.jpg
