--- a/src/pages/2021-07-15-le-phare/index.fr.mdx
+++ b/src/pages/2021-07-15-le-phare/index.fr.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: fr
 title: Le Phare
-subtitle: Projection 360°
+subtitle: Mapping Interactif, Projection 360°
+tags: mapping
 description: Le Phare est une installation interactive avec un système de vidéoprojection à 360°. Les enfants sont invités à utiliser une roue de bateau pour controler le faisceau de la projection.
 date: '2021-07-15'
 image: 9.jpg
