--- a/src/pages/2021-07-15-le-phare/index.mdx
+++ b/src/pages/2021-07-15-le-phare/index.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: en
 title: Le Phare
-subtitle: 360° Projection
+subtitle: Interactive Mapping, 360° Projection
+tags: mapping
 description: Le Phare is an interactive installation with a 360° video projection system. Children are invited to use a boat wheel to control the projection.
 date: '2021-07-15'
 image: 9.jpg
