--- a/src/pages/2022-07-01-smart-faune/index.fr.mdx
+++ b/src/pages/2022-07-01-smart-faune/index.fr.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: fr
 title: Smart Faune
-subtitle: Parcours dansé en espace public
+subtitle: Parcours sonore, Danse
+tags: other
 description: Outil de streaming audio ultra-faible latence développé pour la performance Smart Faune
 date: '2022-12-01'
 image: 0.jpg
