--- a/src/pages/2022-07-01-smart-faune/index.mdx
+++ b/src/pages/2022-07-01-smart-faune/index.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: en
 title: Smart Faune
-subtitle: Public space dance performance
+subtitle: Audio journey, Dance, Public Space
+tags: other
 description: Audio broadcasting software with ultra-low latency developped for the Smart Faune performance
 date: '2022-12-01'
 image: 0.jpg
