--- a/src/pages/2022-09-01-painting-mirror/index.mdx
+++ b/src/pages/2022-09-01-painting-mirror/index.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: en
 title: Painting Mirror
-subtitle: Videomapping
+subtitle: Interactive Mapping, Selfies, AI
+tags: mapping
 description: Painting Mirror is an interactive projection in which the audience is photographed and projected in famous painters styles.
 date: '2022-09-01'
 image: 7.jpg
