--- a/src/pages/2023-01-01-la-bulle/index.fr.mdx
+++ b/src/pages/2023-01-01-la-bulle/index.fr.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: fr
 title: La Bulle
-subtitle: Mur Photo interactif
+subtitle: Mapping Interactif, Photos
+tags: mapping
 description: Projet de mur photo interactif développé pour créer du lien dans les lieux de vie 
 date: '2023-01-01'
 image: 2.jpg
