--- a/src/pages/2023-01-01-la-bulle/index.mdx
+++ b/src/pages/2023-01-01-la-bulle/index.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: en
 title: La Bulle
-subtitle: Interactive photo wall
+subtitle: Interactive Mapping, Photos
+tags: mapping
 description: Interactive photo wall project developed to create bonds in the workplace and other spaces
 date: '2023-01-01'
 image: 2.jpg
