--- a/src/pages/2023-01-01-reveality/index.fr.mdx
+++ b/src/pages/2023-01-01-reveality/index.fr.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: fr
 title: Reveality
-subtitle: Application XR
+subtitle: Application, Réalité Augmentée
+tags: software, xr
 description: Application de création et diffusion pour la Réalité Augmentée
 date: '2023-01-01'
 image: cover.jpg
