--- a/src/pages/2023-03-01-live-maker/index.fr.mdx
+++ b/src/pages/2023-03-01-live-maker/index.fr.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: fr
 title: Live Maker
-subtitle: Logiciel
+subtitle: Logiciel, Interaction public
+tags: software
 description: Outil pour créer des expériences interactives avec des smartphones
 date: '2023-03-01'
 image: 26v_2_webw.jpg
