--- a/src/pages/2023-03-01-live-maker/index.mdx
+++ b/src/pages/2023-03-01-live-maker/index.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: en
 title: Live Maker
-subtitle: Software
+subtitle: Software, public interaction
+tags: software
 description: Toolkit to create interactive experiences with smartphones
 date: '2023-03-01'
 image: 26v_2_webw.jpg
