--- a/src/pages/page-about/index.fr.mdx
+++ b/src/pages/page-about/index.fr.mdx
@@ -3,6 +3,7 @@ path: /about
 layout: page
 language: fr
 title: About
+tags: none
 description: A propos de Maxime Touroute
 image: profile.jpg
 priority: 0
@@ -10,26 +11,67 @@ embeddedImagesLocal:
   - profile.jpg
 ---
 
-<MdxImage alt={"Image d'illustration"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
+<MdxImage alt={"Photo portrait de Maxime Touroute"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
 
 <br />
 <br />
 
-### — Coucou, moi c'est Maxime
 
-Passionné de cinéma, photographie et d'arts numériques, je m'investis sur des projets où créativité et technologie se mêlent.
-Proficient en réalisation vidéo, du tournage à la post-production. Formé ingénieur, je me specialise dans les **technologies de l'audiovisuel et du développement logiciel**.
-Je n'ai pas peur d'apprendre de nouveaux outils pour ouvrir de nouvelles possibilités créatives.
+Passionné d'audiovisuel et d'arts numériques, je m'investis sur des projets où créativité et technologie se mêlent.
 
-**Ouvert aux nouveaux projets**
+Formé ingénieur informatique, je n'ai pas peur de m'attaquer aux toutes dernières technologies pour débloquer de nouvelles possibilités créatives.
 
-— [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+
+### — Ce que je fais
+
+* Rejoindre des équipes artistiques en tant que développeur, régisseur, vidéaste
+* Produire et diffuser des créations originales
+* Développer et mutualiser des logiciels avec institutions culturelles et artistes
+
+
+### — Mes compétences
+* Développement Informatique (web, IA, 3D, natif...)
+* Direction Artistique, production
+* Gestion de projet, management
+* Réalisation vidéo, du tournage à la post-production
+
+
+### — Actuellement ouvert aux nouveaux projets
+[maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+
+<br/>
+<br/>
+<br/>
+
+
+<br/>
+<br/>
+<br/>
+  
+  
 
 #### Distinctions, Récompenses, Expositions
 
 - (A venir) A suivre sur [Instagram](http://instagram.com/maximetouroute)
 
-- (2023) Exposition en Réalité Augmentée, Lyon  
+
+- (2023) Of a Mind, Irlande 
+  **Création originale avec [Audio Broadcaster](/audio-broadcaster#content) Produit par [Listen and Breathe](//www.listenandbreathe.live)** 
+
+- (2023) Le Grand Déménagement du CCO, Villeurbanne  
+ **Création originale avec [Audio Broadcaster](/audio-broadcaster#content) Produit par [Natacha Paquignon](//natachapaquignon.com)** 
+
+- (2023) Nuit Blanche, Paris  
+ **Création originale avec [Audio Broadcaster](/audio-broadcaster#content) Produit par [Natacha Paquignon](//natachapaquignon.com)** 
+
+- (2023) Festi Lumi, Mapping, Corse  
+ **[Painting Mirror](/painting-mirror#content)** 
+
+- (2023) Nuit Blanche, Paris  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2023) Festival Parades, Paris  
+  **[Live Drawing](/livedrawing#content)**
 
 - (2022) Résidence à la Maison des Métallos, Paris  
  **Développement de [Smart Faune](/smart-faune#content) Produit par [Naïf Production](//naif-production.fr)**  
@@ -37,7 +79,7 @@ Je n'ai pas peur d'apprendre de nouveaux outils pour ouvrir de nouvelles possibi
 - (2022) Digital November, Mapping à distance, Yanhon, Birmanie  
   **[Live Drawing](/livedrawing#content)**
 
-- (2022) Exposition, mapping, Johannesbourg, Afrique du Sud  
+- (2022) Exposition, Mapping, Johannesbourg, Afrique du Sud  
   **[Live Drawing](/livedrawing#content)**
 
 - (2022) Festival de la Science, Exposition Réalité Augmentée  
