--- a/src/pages/page-about/index.mdx
+++ b/src/pages/page-about/index.mdx
@@ -3,6 +3,7 @@ path: /about
 layout: page
 language: en
 title: About
+tags: none
 description: About Maxime Touroute
 image: profile.jpg
 priority: 0
@@ -10,25 +11,63 @@ embeddedImagesLocal:
   - profile.jpg
 ---
 
-<MdxImage alt={"Image d'illustration"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
+<MdxImage alt={"Portrait picture of Maxime Touroute"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
 
 <br />
 <br />
 
-### — Hi, I'm Maxime.
 
-Passionate by cinema, photography and digital arts, I love to work on projects in which my creativity and technical skills can be an asset. Well versed in **film making** from shooting to post-production. Being a full fledged engineer I specialise on **audiovisual technologies and software development**. I'm not afraid to learn cutting-edge technologies to open up new creative possibilities.
+Passionate by cinema, photography and digital arts, I work on projects where creativity and technology meet.
 
-**Currently open to new projects**
+Being a full-fledged engineer, I'm not afraid to work with state of the art technologies to unlock up new creative possibilities.
 
-— [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+### — What I do
+
+* Join artistic teams as a developer, technician, videographer
+* Create and exhibit digital artworks
+* Build and share software with cultural institutions and artists
+
+
+### — My skills
+
+* Software development (wab, AI, 3D, native...)
+* Art Direction, Production
+* Project management, team management
+* Film making, from shooting to post-production
+
+
+
+### — Currently open to new projects 
+[maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+
+<br/>
+<br/>
+<br/>
+
+
+<br/>
+<br/>
+<br/>
+  
 
 #### Distinctions, Awards, Exhibitions
 
 - (Upcoming Events) Check my [Instagram](http://instagram.com/maximetouroute)
 
+- (2023) Of a Mind, Irlande 
+  **Performance using [Audio Broadcaster](/audio-broadcaster#content) Produced by [Listen and Breathe](//www.listenandbreathe.live)** 
 
-- (2023) Augmented Reality Exhibition, Lyon  
+- (2023) Le Grand Déménagement du CCO, Villeurbanne  
+ **Performance using [Audio Broadcaster Software](/audio-broadcaster#content) Produced by [Natacha Paquignon](//natachapaquignon.com)** 
+
+- (2023) Festi Lumi, Mapping, Corse  
+ **[Painting Mirror](/painting-mirror#content)** 
+
+- (2023) Nuit Blanche, Paris  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2023) Festival Parades, Paris  
+  **[Live Drawing](/livedrawing#content)**
 
 - (2022) Art Residency at la Maison des Métallos, Paris  
  **[Smart Faune](/smart-faune#content)**  
