--- a/src/pages/page-grading-showcase/index.mdx
+++ b/src/pages/page-grading-showcase/index.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: en
 title: Color Grading
 subtitle: Portfolio
+tags: other
 description: Color grading works of Maxime Touroute
 date: '2020-01-01'
 image: ber2_a.jpg
