--- a/src/pages/2015-01-01-millumin/index.fr.mdx
+++ b/src/pages/2015-01-01-millumin/index.fr.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: fr
 title: Millumin
 subtitle: Logiciel
+tags: software
 description: Solution complète pour créer des spectacles audiovisuels. Théâtre, Danse, Videomapping, Installations Interactives
 date: '2015-01-01'
 image: cover.jpg
