--- a/src/pages/2015-01-01-millumin/index.mdx
+++ b/src/pages/2015-01-01-millumin/index.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: en
 title: Millumin
 subtitle: Software
+tags: software
 description: Complete solution to create Audiovisual Shows. Theater, Dance, Videomapping, Interactive installation
 date: '2015-01-01'
 image: cover.jpg
