--- a/src/pages/2018-03-02-harmonie-des-spheres/index.mdx
+++ b/src/pages/2018-03-02-harmonie-des-spheres/index.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: en
 title: Harmonie des Sphères
 subtitle: Short movie
+tags: other
 description: Independent short movie directed and produced by Vincent Montalieu.
 date: '2018-12-25'
 priority: 4
