--- a/src/pages/2018-09-01-humanlapse/index.mdx
+++ b/src/pages/2018-09-01-humanlapse/index.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: en
 title: Humanlapse
 subtitle: Portraits in motion
+tags: other
 description: Photography project aiming to explore usage of timelapse and hyperlapse techniques for portraits.
 date: '2019-02-01'
 image: cover.jpg
