--- a/src/pages/2018-10-30-innocent-words/index.fr.mdx
+++ b/src/pages/2018-10-30-innocent-words/index.fr.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: fr
 title: Innocent Words
 subtitle: Court métrage
+tags: other
 description: Des mots qui semblent innocents... et pourtant.
 date: '2018-12-20'
 image: cover.jpg
