--- a/src/pages/2018-10-30-innocent-words/index.mdx
+++ b/src/pages/2018-10-30-innocent-words/index.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: en
 title: Innocent Words
 subtitle: Short movie
+tags: other
 description: Words that seem innocent... and yet.
 date: '2018-12-20'
 image: cover.jpg
