--- a/src/pages/2020-01-01-deep-roto/index.fr.mdx
+++ b/src/pages/2020-01-01-deep-roto/index.fr.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: fr
 title: Deep Roto
-subtitle: Logiciel
+subtitle: Logiciel, IA, Vidéo
+tags: software
 description: Logiciel de détourage vidéo automatique
 date: '2020-01-01'
 image: cover.jpg
