--- a/src/pages/2021-04-01-monolith/index.fr.mdx
+++ b/src/pages/2021-04-01-monolith/index.fr.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: fr
 title: Monolith
 subtitle: Performance musicale interactive
+tags: other
 description: Performance musicale collaborative dans laquelle la foule choisit les prochaines mélodies en temps-réel, explorant une nouvelle forme d'improvisation musicale.
 date: '2021-04-01'
 image: cover.jpg
