--- a/src/pages/2022-09-01-painting-mirror/index.fr.mdx
+++ b/src/pages/2022-09-01-painting-mirror/index.fr.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: fr
 title: Painting Mirror
-subtitle: Videomapping
+subtitle: Mapping Interactif, Selfies, IA
+tags: mapping
 description: Painting Mirror est un videomapping interactif où le public est photographié puis re-projeté dans le style de grands artistes peintres.
 date: '2022-09-01'
 image: 7.jpg
