--- a/src/pages/2023-01-01-reveality/index.mdx
+++ b/src/pages/2023-01-01-reveality/index.mdx
@@ -4,7 +4,8 @@ layout: article
 category: portfolio
 language: en
 title: Reveality
-subtitle: XR App
+subtitle: App, Augmented Reality
+tags: software, xr
 description: Creation and diffusion app for Augmented Reality
 date: '2023-01-01'
 image: cover.jpg
