--- a/src/pages/page-grading-showcase/index.fr.mdx
+++ b/src/pages/page-grading-showcase/index.fr.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: fr
 title: Étalonnage
 subtitle: Portfolio
+tags: other
 description: Portfolio d'étalonnages de Maxime Touroute
 date: '2020-01-01'
 image: ber2_a.jpg
