--- a/src/pages/page-about/index.mdx
+++ b/src/pages/page-about/index.mdx
@@ -19,7 +19,7 @@ embeddedImagesLocal:
 
 Passionate by cinema, photography and digital arts, I work on projects where creativity and technology meet.
 
-Being a full-fledged engineer, I'm not afraid to work with state of the art technologies to unlock up new creative possibilities.
+Being a full-fledged engineer, I'm not afraid to work with state of the art technologies to unlock new creative possibilities.
 
 ### — What I do
 
