--- a/src/pages/page-about/index.mdx
+++ b/src/pages/page-about/index.mdx
@@ -63,10 +63,10 @@ Being a full-fledged engineer, I'm not afraid to work with state of the art tech
 - (2023) Festi Lumi, Mapping, Corse  
  **[Painting Mirror](/painting-mirror#content)** 
 
-- (2023) Nuit Blanche, Paris  
+- (2023) Nuit Blanche, Mapping, Paris  
   **[Live Drawing](/livedrawing#content)**
 
-- (2023) Festival Parades, Paris  
+- (2023) Festival Parades, Mapping, Paris  
   **[Live Drawing](/livedrawing#content)**
 
 - (2022) Art Residency at la Maison des Métallos, Paris  
