--- a/src/pages/page-about/index.mdx
+++ b/src/pages/page-about/index.mdx
@@ -28,11 +28,12 @@ Being a full-fledged engineer, I'm not afraid to work with state of the art tech
 * Build and share software with cultural institutions and artists
 
 
-### — My skills
+### — My skilsl
 
 * Software development (wab, AI, 3D, native...)
 * Art Direction, Production
 * Project management, team management
+* Entrepreneurship
 * Film making, from shooting to post-production
 
 
