--- a/src/pages/page-about/index.mdx
+++ b/src/pages/page-about/index.mdx
@@ -28,7 +28,7 @@ Being a full-fledged engineer, I'm not afraid to work with state of the art tech
 * Build and share software with cultural institutions and artists
 
 
-### — My skilsl
+### — My skills
 
 * Software development (wab, AI, 3D, native...)
 * Art Direction, Production
