New : porte auguste

--- a/src/pages/2023-03-01-environ-alger-augmente/index.fr.mdx
+++ b/src/pages/2023-03-01-environ-alger-augmente/index.fr.mdx
@@ -4,7 +4,7 @@ layout: article
 category: portfolio
 language: fr
 title: Environ Alger
-subtitle: Expo Photo Augmentée
+subtitle: Expo Photo Augmentée, Lyon
 tags: software
 description: Parcours en Réalité Augmentée réalisé avec de jeunes étudiants en insertion professionnelle
 date: '2023-03-01'
