--- a/src/pages/2023-03-01-environ-alger-augmente/index.mdx
+++ b/src/pages/2023-03-01-environ-alger-augmente/index.mdx
@@ -4,7 +4,7 @@ layout: article
 category: portfolio
 language: en
 title: Environ Alger
-subtitle: AR Photo Exhibition
+subtitle: AR Photo Exhibition, Lyon
 tags: software
 description: Augmented Reality experience created with young students in professional integration
 date: '2023-03-01'
