--- a/src/pages/2023-07-01-cite-sciences/index.fr.mdx
+++ b/src/pages/2023-07-01-cite-sciences/index.fr.mdx
@@ -4,7 +4,7 @@ layout: article
 category: portfolio
 language: fr
 title: Carrefour Numérique Augmenté
-subtitle: Ateliers jeune public et familles, Cité des Sciences
+subtitle: Ateliers jeune public et familles, Cité des Sciences, Paris
 tags: none
 description: Nous avons organisé six ateliers de création en réalité augmentée pour le programme d'été du Carrefour Numérique à la Cité des Sciences.
 date: '2023-07-07'
