--- a/src/pages/2023-07-01-cite-sciences/index.mdx
+++ b/src/pages/2023-07-01-cite-sciences/index.mdx
@@ -4,7 +4,7 @@ layout: article
 category: portfolio
 language: en
 title: Carrefour Numérique Augmenté
-subtitle: Family workshops, Cité des Sciences
+subtitle: Family workshops, Cité des Sciences, Paris
 tags: none
 description: We organized six augmented reality creation workshops for the summer program at the Carrefour Numérique in the Cité des Sciences.
 date: '2023-07-07'
